[gd_scene load_steps=8 format=2]

[ext_resource path="res://Graphics/Fleche.svg" type="Texture" id=1]
[ext_resource path="res://Scenes/Règle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 167.5, 30 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="Theme" id=5]
Panel/styles/panel = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37, 10 )

[node name="Regle" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
margin_right = 334.0
margin_bottom = 60.0
mouse_filter = 1

[node name="AreaPrincipale" type="Area2D" parent="ColorRect"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/AreaPrincipale"]
position = Vector2( 167.5, 30 )
shape = SubResource( 1 )

[node name="Gauche" type="ColorRect" parent="ColorRect"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 1
theme = SubResource( 5 )

[node name="AreaGauche" type="Area2D" parent="ColorRect/Gauche"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Gauche/AreaGauche"]
position = Vector2( 36.5, 10 )
shape = SubResource( 2 )

[node name="GauchePoint" type="Position2D" parent="ColorRect/Gauche"]
position = Vector2( 6.5, 10 )

[node name="Flèche" type="Sprite" parent="ColorRect"]
position = Vector2( 166, 30 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="Droite" type="ColorRect" parent="ColorRect"]
unique_name_in_owner = true
margin_left = 182.0
margin_top = 10.0
margin_right = 256.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 1

[node name="AreaDroite" type="Area2D" parent="ColorRect/Droite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Droite/AreaDroite"]
position = Vector2( 37, 10 )
shape = SubResource( 3 )

[node name="DroitePoint" type="Position2D" parent="ColorRect/Droite"]
position = Vector2( 6.5, 10 )

[node name="SupprimerRegle" type="Button" parent="."]
margin_left = 156.0
margin_top = 1.0
margin_right = 176.0
margin_bottom = 61.0
rect_scale = Vector2( 1.02006, 0.974467 )
focus_mode = 0
button_mask = 2
enabled_focus_mode = 0
flat = true
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_Click_ColorRect"]
[connection signal="gui_input" from="ColorRect/Gauche" to="." method="_on_Gauche_gui_input"]
[connection signal="gui_input" from="ColorRect/Droite" to="." method="_on_Droite_gui_input"]
[connection signal="pressed" from="SupprimerRegle" to="." method="_on_Button_pressed"]
